@@ -15,6 +15,7 @@ CHANGE LOG
 * Fixed: Wrong instructor id used by course_list shortcode.
 * Fixed: Redirect from WooCommerce shop main page.
 * Fixed: Problem with Virtual Pages when site use SSL.
+* Fixed: Problem with answers with html enties.
 
 = 1.3.4.1 =
 * Fixed: Skip search filter if query post types are bbpress types
